# torque_control

./: .gitignore  Z1_Torque_Control_Data_Report.md  Z1_Torque_Control_Weekly_Report.md  z1_code_formula_explanation_report.md  z1_model_based_cpid_final_report.md  z1_torque_control_report_v3.md
reference/: z1_analytic_dm_python_traj.py
z1_project/: CODEX_HANDOFF.md  README.md  REAL_Z1_COMPUTED_PID_TEST_COMMANDS.md  analyze_final_controller_comparison.py  analyze_gain_logs.py  benchmark_fast_dynamics.py  compare_feedforward_trace.py  compare_finite_difference_dynamics.py  compare_forward_pose_sdk.py  compare_joint_workspace_sdk.py  compare_sdk_dynamics.py  compare_sim_joint_controller_sdk.py  compare_torque.py  controller.py  plot_log.py  record_sdk_forward_torque.py  replay_recorded_torque.py  replay_sdk_lowcmd_gazebo.py  robot_io.py  ros_back_to_start.py  ros_torque_bridge.py  run_eval_6joint_5_10_30_gazebo.sh  run_eval_forward_pose_4controllers_gazebo.sh  run_eval_forward_pose_computed_pid_friction_gazebo.sh  run_eval_forward_pose_sdk_gazebo.py  run_eval_joint_workspace_computed_pid_friction_gazebo.sh  run_eval_joint_workspace_gazebo.sh  run_eval_joint_workspace_sdk_gazebo.py  run_eval_joint_workspace_sdk_ros_gazebo.py  run_sdk_sim_joint_controller_compare.sh  run_sim_joint_controller_compare.sh  run_tune_j2_computed_pid_friction.sh  sdk_j4_reference_baseline.py  setup_fast_dynamics.py  simulate_offline.py  simulate_offline_runtime.py  test_controller.py  torque_main.py  trajectory.py  validate_gravity_pdf_method.py  (+3 more)
z1_project/cpp/: CMakeLists.txt  pure_torque_bridge.cpp  sdk_pure_torque_augpd_test.cpp
z1_project/logs/eval_joint_workspace_computed_pid_friction/: run_output.txt
z1_project/logs/sim_compare_joint_controllers_20260613_053905/: computed_torque_baseline_j4_neg30.csv  final_controller_summary.csv  final_dynamics_model_validation.csv  final_joint_case_summary.csv  final_log_inventory.csv  final_report_conclusion.md  (+7 more)
z1_project/reports/: 2026-05-28_torque_control_work_report.md  2026-05-29_return_home_controller_work_report.md
(+25 files in other folders)
